# ontology

./: .gitignore  README.md  catalog-v001.xml  crima.ttl  mkdocs.yml
docs/: README.md  abbreviations.md  index.md
docs/assets/: extra.css
docs/helper/: index.md
docs/main/: index.md
docs/terminology/: index.md
imports/fragments/: bibo.ttl  catalog-v001.xml  dtype.ttl  foaf.ttl  qudt.ttl  schema.ttl  skos.ttl  time.ttl  vann.ttl
imports/full/: bibo.ttl  catalog-v001.xml  foaf.ttl  geo.ttl  qudt-quantitykind.ttl  qudt-soqk.ttl  qudt-usertest.ttl  schema.ttl  sosa-common.ttl  sosa-obs.ttl  swrl.ttl  wmdr-unit.ttl  xkos.ttl
modules/: ar5-adapt.ttl  catalog-v001.xml  ecv-data.ttl  emdat.ttl  hip.ttl
scripts/: .gitignore  README.md  helper  pyproject.toml  requirements.txt
scripts/crima_ontology_tool/: __main__.py  catalog.py  cclc.py  download.py  ecv.py  hip.py  merge.py  mermaid.py  pylode.py  sanitize.py  split.py
scripts/crima_vkg_tool/: __main__.py  catalog.py  cclc.py  download.py  ecv.py  hip.py  merge.py  mermaid.py  pylode.py  sanitize.py  split.py  util.py
testing/: metadata.ttl  prefixes.ttl
testing/full/: catalog-v001.xml
testing/shacl/: cclc-data.ttl
wp2/CRIMA_ontology/: CRIMA.owl  README.md  change_log.txt  crima-core.ttl  crima.ttl  crima_last.ttl  crima_v1.ttl  crima_v1_notes.md  crima_v2.ttl  crima_v2_notes.md  crima_v3.ttl  crima_v3_notes.md  crima_v4.ttl  crima_v4_notes.md  crima_v5.ttl  crima_v5_notes.md  crima_v6.ttl  crima_v6_notes.md  nuts_europe.ttl  source_list.md  source_list.txt
wp2/CRIMA_ontology/diagrams/: greta_notes_connections.rtf
wp2/CRIMA_ontology/imports/fragments/: as.ttl  catalog-v001.xml  cc.ttl  dbo.ttl  dcat.ttl  dcterms.ttl  geo.ttl  prov.ttl  qudt-unit.ttl  skos.ttl  time.ttl  voaf.ttl  wmdr-unit.ttl  xkos.ttl
wp2/CRIMA_ontology/imports/full/: as.ttl  catalog-v001.xml  cc.ttl  clc.ttl  dbo.ttl  dcat.ttl  dcmitype.ttl  dcterms.ttl  dpo.ttl  dtype.ttl  org.ttl  prov.ttl  qudt-coords.ttl  qudt-datatype.ttl  qudt-facade.ttl  qudt-prefix.ttl  qudt-qkdv.ttl  qudt-sou.ttl  qudt.ttl  schema.ttl  skos.ttl  sosa-common.ttl  time.ttl  vaem.ttl  vann.ttl  voaf.ttl
wp2/CRIMA_ontology/modules/: ar6-cid.ttl  ar6-impact.ttl  catalog-v001.xml  cbib.ttl  cplace.ttl  ctlo.ttl  ecv-data.ttl  ecv.ttl  emdat.ttl  ex.ttl  ich.ttl
wp2/CRIMA_ontology/scripts/: README.md  helper  metadata.ttl  requirements.txt
wp2/CRIMA_ontology/source_ontologies/: DOLCEbasic-3.5.ttl  V2.m-2.Hz-1.ttl  bibo.ttl  corine.ttl  dcterms.ttl  pT2.Hz-1.ttl  skos.properties  skos.ttl  sosa-common.ttl  sosa-observation.ttl  time.ttl  undrr-isc-hazard-classification.ttl  wekg.ttl
wp2/CRIMA_ontology/testing/full/: crima.ttl
wp2/vkg/ontology/: README.md  catalog-v001.xml  change-log.txt  crima-no-abox.ttl  crima.ttl
wp2/vkg/ontology/modules/: ar5-adapt.ttl  ar6-cid.ttl  ar6-impact.ttl  catalog-v001.xml  cbib.ttl  cclc-data.ttl  cclc.ttl  ccore.ttl  clex.ttl  cplace.ttl  crid.ttl  ctlo.ttl  cunit.ttl  ecv-data.ttl  ecv.ttl  emdat.ttl  ex.ttl  hip.ttl  ich.ttl
(+23 files in other folders)
